# nfd-bindings

./: .gitignore  CMakeLists.txt  index.ts  package-lock.json  package.json
src/: main.cpp  win_delay_exe_hook.cpp
